--- a/home.html
+++ b/home.html
@@ -14,15 +14,25 @@
     <header>
       <img src="banner.js" id="banner" alt="1 of 4 custom nerd themed images with our name Conglomeration"/>
     </header>
-    <nav>
-    <ul class="nav nav-pills navbar-inverse">
-      <li role="presentation" class="active"><a href="home.html">Home</a></li>
-      <li role="presentation"><a href="gaming.html">Gaming</a></li>
-      <li role="presentation"><a href="masquerade.html">Masquerade</a></li>
-      <li role="presentation"><a href="sponsor.html">Sponsor Us</a></li>
-      <li role="presentation"><a href="about.html">About</a></li>
-    </ul>
-  </nav>
+
+
+    <nav class="navbar navbar-inverse" role="navigation">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="home.html">Home</a></li>
+          <li><a href="gaming.html">Gaming</a></li>
+          <li><a href="masquerade.html">Masquerade</a></li>
+          <li><a href="sponsor.html">Sponsor Us</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <div class="container">
       <div class="row">
@@ -72,6 +82,7 @@
       </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     
   </body>
