--- a/sponsor.html
+++ b/sponsor.html
@@ -27,6 +27,7 @@
           <li><a href="masquerade.html">Masquerade</a></li>
           <li class="active"><a href="sponsor.html">Sponsor Us</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
     </nav>
