--- a/about.html
+++ b/about.html
@@ -38,6 +38,11 @@
           <h1>About Conglomeration</h1>
            <p>ConGlomeration is Louisville, Kentucky&#39;s own fan-run multimedia science fiction and fantasy convention. (It&#39;s true; just ask Wikipedia.)</p>
            <p>We who are ConGlomeration pride ourselves on being a product of the local fan community, and for our convention’s family-friendly atmosphere. We took up the Louisville convention mantle after Steve and Sue Francis (our Fan Guests Emeritus…or is it Emeritii?) retired RiverCon in 2000. ConGlomeration was a fixture in the local science fiction calendar from 2001 to 2008 before going on a forced hiatus in 2009 (our host hotel went bankrupt and shut its doors at the last minute). On April 9, 2010, ConGlomeration returned, and our next convention will throw down April 8-10, 2016.</p>
+           <p>Our Hospitality Suite is legendary not just for the free quality snacks (chocolate fondue fountain, anyone?) but for the unfettered access to our convention guests. Harry Turtledove has built diet-coke-and-Mentos fountains in the courtyard outside, and Walter Koenig seemed to subsist entirely on handfuls of Con Suite M&Ms. And we don’t impose these concessions on guests; the writers, artists, and celebrities that have visited ConGlomeration almost invariably thank us for the access and amicability our convention affords both them and our members.</p>
+           <p>At ConGlomeration, you don&#39;t just play your favorite RPG, card and tabletop games, you can learn new ones and learn to run, customize and design your own. Don’t just buy your favorite collectible art, crafts and costumes, we&#39;ll teach you how to create and personalize your own secret treasures and alter egos. Don’t just talk about your favorite movies, comics, books and stories — at ConGlomeration you can learn to write, draw, record and curate your unique narratives.</p>
+           <p>Our Art Show is one of the largest and most respected in the region. Our Dealers Room is the size of a high school gymnasium and sells out with enthusiastic vendors every year. Our Masquerade takes over an entire ballroom and is the lynchpin our family-friendly activities. Our Game Room never closes; it&#39;s open, staffed, and has hosted games 24 hours a day from the beginning of the convention until the end.</p>
+           <p>That said, there&#39;s always room for improvement. Got ideas? Contact the appropriate member of our Organizing Committee. Beyond suggestions, we need your help. ConGlomeration is made for fans by fans. Join the Platypus Army and help us build a better convention! Got a local business that would like to reach our legions of loyal fans? Sponsor ConGlomeration.</p>
+           <p>Keep up to date on the latest ConGlomeration info via the official ConGlomeration blog, or by following our Facebook page and Twitter feed.</p>
 
         </div>
         
@@ -51,10 +56,10 @@
     <footer>
       <div class="row">
         <div class="col-md-12">
-          <a href="http://twitter.com/shannoncancello"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
-          <a href="http://facebook.com/shannoncancello"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
+          <a href="http://twitter.com/conglomeration"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
+          <a href="http://facebook.com/ConGlomerationKY"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
           <a href="http://instagram.com/shannoncancello"><img src="photos/instagram.png" alt="Instagram Logo" class="img-responsive"></a>
-          <a href="http://pinterest.com/shannoncancello"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
+          <a href="http://pinterest.com/conglommasque/"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
         </div>
       </div>
     </footer>
