--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,15 @@
           <br>
           Shannon Cancello & Jay Garmon<p>
 
+          <h2>Mailing Address</h2>
+          <blockquote>
+            <p>ConGlomeration
+              <br>
+              P.O. Box 32095
+              <br>
+              Louisville, KY 40232-2095
+            </p>
+          </blockquote>
 
         </div>
         
@@ -130,10 +139,10 @@
     <footer>
       <div class="row">
         <div class="col-md-12">
-          <a href="http://twitter.com/shannoncancello"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
-          <a href="http://facebook.com/shannoncancello"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
+          <a href="http://twitter.com/conglomeration"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
+          <a href="http://facebook.com/ConGlomerationKY"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
           <a href="http://instagram.com/shannoncancello"><img src="photos/instagram.png" alt="Instagram Logo" class="img-responsive"></a>
-          <a href="http://pinterest.com/shannoncancello"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
+          <a href="http://pinterest.com/conglommasque/"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
         </div>
       </div>
     </footer>
