--- a/masquerade.html
+++ b/masquerade.html
@@ -50,7 +50,7 @@
 
           <ul id="imageGallery">
             <li><a href="photos/batman.jpg"><img src="photos/batman.jpg" width="100" alt="Batman and Wonder Woman" class="img-thumbnail"></a></li>
-            <li><a href="photos/joker.jpg"><img src="photos/joker.jpg" width="100" alt="The Joker and Wonder Woman" class="img-thumbnail"></a></li>
+            <li><a href="photos/weepingangel.jpg"><img src="photos/weepingangel.jpg" width="100" alt="Weeping Angel" class="img-thumbnail"></a></li>
             <li><a href="photos/silkspectre.jpg"><img src="photos/silkspectre.jpg" width="100" alt="The Silk Spectre" class="img-thumbnail"></a></li>
             <li><a href="photos/steampunk.jpg"><img src="photos/steampunk.jpg" width="100" alt="An Original Steampunk Ensemble" class="img-thumbnail"></a></li>
             <li><a href="photos/unholy.jpg"><img src="photos/unholy.jpg" width="100" alt="Death" class="img-thumbnail"></a></li>
@@ -76,10 +76,10 @@
     <footer>
       <div class="row">
         <div class="col-md-12">
-          <a href="http://twitter.com/shannoncancello"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
-          <a href="http://facebook.com/shannoncancello"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
+          <a href="http://twitter.com/conglomeration"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
+          <a href="http://facebook.com/ConGlomerationKY"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
           <a href="http://instagram.com/shannoncancello"><img src="photos/instagram.png" alt="Instagram Logo" class="img-responsive"></a>
-          <a href="http://pinterest.com/shannoncancello"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
+          <a href="http://pinterest.com/conglommasque/"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
         </div>
       </div>
     </footer>
