--- a/sponsor.html
+++ b/sponsor.html
@@ -59,10 +59,10 @@
     <footer>
       <div class="row">
         <div class="col-md-12">
-          <a href="http://twitter.com/shannoncancello"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
-          <a href="http://facebook.com/shannoncancello"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
+          <a href="http://twitter.com/conglomeration"><img src="photos/twitter.png" alt="Twitter Logo" class="img-responsive"></a>
+          <a href="http://facebook.com/ConGlomerationKY"><img src="photos/facebook.png" alt="Facebook Logo" class="img-responsive"></a>
           <a href="http://instagram.com/shannoncancello"><img src="photos/instagram.png" alt="Instagram Logo" class="img-responsive"></a>
-          <a href="http://pinterest.com/shannoncancello"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
+          <a href="http://pinterest.com/conglommasque/"><img src="photos/pinterest.png" alt="Pinterest Logo" class="img-responsive"></a>
         </div>
       </div>
     </footer>
